--- a/deploy/examples/immutable_s2i.yaml
+++ b/deploy/examples/immutable_s2i.yaml
@@ -1,7 +1,12 @@
+###
+# This CR deploys 1 kie server set that will build an image containing the
+# library process deployed.
+# Besides it will deploy the resulting image and a monitoring console
+###
 apiVersion: app.kiegroup.org/v1
 kind: KieApp
 metadata:
-  name: rhpam-production-immutable
+  name: library-s2i
 spec:
   environment: rhpam-production-immutable
   objects:
