--- a/config/envs/rhdm-production-immutable.yaml
+++ b/config/envs/rhdm-production-immutable.yaml
@@ -23,7 +23,18 @@ servers:
                   env:
                     - name: KIE_SERVER_CONTAINER_DEPLOYMENT
                       value: "{{.Build.KieServerContainerDeployment}}"
-
+                    - name: KIE_SERVER_MGMT_DISABLED
+                      value: "true"
+                    - name: KIE_SERVER_STARTUP_STRATEGY
+                      value: LocalContainersStartupStrategy
+                    - name: "{{$.MavenRepo}}_MAVEN_REPO_USERNAME"
+                      value: ""
+                    - name: "{{$.MavenRepo}}_MAVEN_REPO_PASSWORD"
+                      value: ""
+                    - name: "{{$.MavenRepo}}_MAVEN_REPO_SERVICE"
+                      value: ""
+                    - name: MAVEN_REPOS
+                      value: "EXTERNAL"
 
       ## KIE server deployment config END
   ## KIE server build config BEGIN
