--- a/config/envs/rhpam-production-immutable.yaml
+++ b/config/envs/rhpam-production-immutable.yaml
@@ -89,6 +89,18 @@ servers:
                   env:
                     - name: KIE_SERVER_CONTAINER_DEPLOYMENT
                       value: "{{.Build.KieServerContainerDeployment}}"
+                    - name: KIE_SERVER_MGMT_DISABLED
+                      value: "true"
+                    - name: KIE_SERVER_STARTUP_STRATEGY
+                      value: LocalContainersStartupStrategy
+                    - name: "{{$.MavenRepo}}_MAVEN_REPO_USERNAME"
+                      value: ""
+                    - name: "{{$.MavenRepo}}_MAVEN_REPO_PASSWORD"
+                      value: ""
+                    - name: "{{$.MavenRepo}}_MAVEN_REPO_SERVICE"
+                      value: ""
+                    - name: MAVEN_REPOS
+                      value: "EXTERNAL"
                     - name: KIE_SERVER_ROUTER_PROTOCOL
                       value: "http"
                     - name: DATASOURCES
