--- a/image.yaml
+++ b/image.yaml
@@ -1,37 +1,46 @@
 schema_version: 1
 
-name: "rhpam-7-tech-preview/business-automation-operator"
+name: "rhpam-7/rhpam-7-operator"
 description: "Red Hat Business Automation Operator"
-version: "x.x"
-from: "rhel-minimal:7.6"
+version: "0.1"
+from: "rhel7-minimal"
 labels:
   - name: "maintainer"
     value: "bsig-cloud@redhat.com"
   - name: "com.redhat.component"
-    value: "business-automation-operator-container"
+    value: "rhpam-7-rhpam73-operator-container"
   - name: "io.k8s.description"
     value: "Operator for deploying RHPAM & RHDM"
   - name: "io.k8s.display-name"
     value: "Red Hat Business Automation Operator"
-  - name: "io.openshift.expose-services"
-    value: "60000:metrics"
   - name: "io.openshift.tags"
     value: "rhpam,rhdm,operator"
+packages:
+  content_sets:
+    x86_64:
+      - rhel-7-server-rpms
+  install:
+    - tar
+    - gzip
 modules:
   repositories:
     - path: modules
   install:
-    - name: business-automation-operator
+    - name: kie-cloud-operator
 artifacts:
-  - name: kie-cloud-operator
-    md5: md5sum
-ports:
-  - value: 6000
+  - name: kie-cloud-operator.tar.gz
+    url: https://github.com/kiegroup/kie-cloud-operator/releases/download/v0.1/kie-cloud-operator.v0.1.tar.gz
+    md5: 257f8c9bc142380411b51aaafb8b17c8
 osbs:
   configuration:
-    container_file: container.yaml
+    container:
+      platforms:
+        only:
+          - x86_64
+      compose:
+        pulp_repos: true
   repository:
-    name: containers/business-automation-operator
+    name: containers/rhpam-7-operator
     branch: rhpam-7.3-openshift-rhel-7
 run:
   user: nobody
