--- a/deploy/crds/kieapp.crd.yaml
+++ b/deploy/crds/kieapp.crd.yaml
@@ -168,9 +168,8 @@ spec:
                     description: KIE Server configuration
                     properties:
                       name:
-                        type: integer
-                        format: int16
-                        description: Number of Server sets that will be deployed
+                        type: string
+                        description: Server name
                       from:
                         type: object
                         description: Image definition to use for all the servers
@@ -510,5 +509,5 @@ spec:
                       type: string
                       description: When present, the RoleMapping Login Module will be configured to use the provided file. This property defines the fully-qualified file path and name of a properties file or resource which maps roles to replacement roles. The format is original_role=role1,role2,role3
                     replaceRole:
-                      type: string
+                      type: boolean
                       description: Whether to add to the current roles, or replace the current roles with the mapped ones. Replaces if set to true.
