--- a/config/envs/rhpam-production.yaml
+++ b/config/envs/rhpam-production.yaml
@@ -24,6 +24,7 @@ servers:
           name: "{{$.ApplicationName}}-postgresql-claim-{{$index}}"
           labels:
             app: "{{$.ApplicationName}}"
+            application: "{{$.ApplicationName}}"
             service: "{{$.ApplicationName}}-postgresql-{{$index}}"
         spec:
           accessModes:
@@ -39,6 +40,7 @@ servers:
           name: "{{$.ApplicationName}}-kieserver-{{$index}}"
           labels:
             app: "{{$.ApplicationName}}"
+            application: "{{$.ApplicationName}}"
             service: "{{$.ApplicationName}}-kieserver-{{$index}}"
         spec:
           replicas: 3
@@ -95,6 +97,7 @@ servers:
           name: "{{$.ApplicationName}}-postgresql-{{$index}}"
           labels:
             app: "{{$.ApplicationName}}"
+            application: "{{$.ApplicationName}}"
             service: "{{$.ApplicationName}}-postgresql-{{$index}}"
         spec:
           strategy:
@@ -119,6 +122,7 @@ servers:
               labels:
                 deploymentConfig: "{{$.ApplicationName}}-postgresql-{{$index}}"
                 app: "{{$.ApplicationName}}"
+                application: "{{$.ApplicationName}}"
                 service: "{{$.ApplicationName}}-postgresql-{{$index}}"
             spec:
               containers:
