--- a/config/envs/rhpam-authoring-ha.yaml
+++ b/config/envs/rhpam-authoring-ha.yaml
@@ -4,6 +4,7 @@ console:
         name: "{{.ApplicationName}}-{{.Console.Name}}-claim"
         labels:
           app: "{{.ApplicationName}}"
+          application: "{{.ApplicationName}}"
       spec:
         accessModes:
           - ReadWriteMany
@@ -64,6 +65,7 @@ others:
           name: "{{.ApplicationName}}-mysql-claim"
           labels:
             app: "{{.ApplicationName}}"
+            application: "{{.ApplicationName}}"
         spec:
           accessModes:
             - ReadWriteOnce
@@ -75,6 +77,7 @@ others:
           name: "{{.ApplicationName}}-{{.Product}}index-claim"
           labels:
             app: "{{.ApplicationName}}"
+            application: "{{.ApplicationName}}"
         spec:
           accessModes:
             - ReadWriteOnce
@@ -111,6 +114,7 @@ others:
               labels:
                 deploymentConfig: "{{.ApplicationName}}-{{.Product}}index"
                 app: "{{.ApplicationName}}"
+                application: "{{.ApplicationName}}"
             spec:
               terminationGracePeriodSeconds: 60
               containers:
@@ -148,6 +152,7 @@ others:
           name: "{{.ApplicationName}}-mysql"
           labels:
             app: "{{.ApplicationName}}"
+            application: "{{.ApplicationName}}"
         spec:
           strategy:
             type: Recreate
@@ -171,6 +176,7 @@ others:
               labels:
                 deploymentConfig: "{{.ApplicationName}}-mysql"
                 app: "{{.ApplicationName}}"
+                application: "{{.ApplicationName}}"
             spec:
               terminationGracePeriodSeconds: 60
               containers:
@@ -213,6 +219,7 @@ others:
       - metadata:
           labels:
             app: "{{.ApplicationName}}"
+            application: "{{.ApplicationName}}"
           name: "{{.ApplicationName}}-amq"
         spec:
           replicas: 1
@@ -226,6 +233,7 @@ others:
             metadata:
               labels:
                 app: "{{.ApplicationName}}"
+                application: "{{.ApplicationName}}"
                 deploymentConfig: "{{.ApplicationName}}-amq"
               name: "{{.ApplicationName}}-amq"
             spec:
@@ -297,6 +305,7 @@ others:
           name: "{{.ApplicationName}}-amq-tcp"
           labels:
             app: "{{.ApplicationName}}"
+            application: "{{.ApplicationName}}"
             service: "{{.ApplicationName}}-amq"
           annotations:
             description: The broker's OpenWire port.
@@ -311,6 +320,7 @@ others:
           name: "{{.ApplicationName}}-mysql"
           labels:
             app: "{{.ApplicationName}}"
+            application: "{{.ApplicationName}}"
             service: "{{.ApplicationName}}-mysql"
           annotations:
             description: The MySQL server's port.
@@ -329,6 +339,7 @@ others:
           name: "{{.ApplicationName}}-{{.Product}}index"
           labels:
             app: "{{.ApplicationName}}"
+            application: "{{.ApplicationName}}"
             service: "{{.ApplicationName}}-{{.Product}}index"
           annotations:
             description: All the Business Central Indexing Elasticsearch ports.
@@ -339,6 +350,7 @@ others:
           name: "{{.ApplicationName}}-{{.Product}}index"
           labels:
             app: "{{.ApplicationName}}"
+            application: "{{.ApplicationName}}"
           annotations:
             description: Route for Business Central Indexing's Elasticsearch http service.
         spec:
