--- a/deploy/crds/kieapp.crd.yaml
+++ b/deploy/crds/kieapp.crd.yaml
@@ -71,65 +71,23 @@ spec:
                           type: object
                         requests:
                           type: object
-                server:
-                  type: object
-                  description: Configuration of the RHPAM KIE server
-                  properties:
-                    deployments:
-                      type: integer
-                      format: int16
-                      description: Number of Server sets that will be deployed
-                    from:
+                    ssoClient:
                       type: object
-                      description: Image definition to use for all the servers
-                      required:
-                        - kind
-                        - name
+                      description: Client definitions used for creating the RH-SSO clients in the specified Realm
                       properties:
-                        kind:
-                          type: string
-                          description: Object kind
-                          enum:
-                            - ImageStreamTag
-                            - DockerImage
                         name:
                           type: string
-                          description: Object name
-                        namespace:
+                          description: Client name
+                        secret:
                           type: string
-                          description: Namespace where the object is located for the case of Kind ImageStreamTag
-                    spec:
-                      type: object
-                      description: Common Server configuration
-                      properties:
-                        env:
-                          type: array
-                          items:
-                            type: object
-                            required:
-                              - name
-                            oneOf:
-                              - required:
-                                  - value
-                              - required:
-                                  - valueFrom
-                            properties:
-                              name:
-                                type: string
-                                description: Name of an environment variable
-                              value:
-                                type: string
-                                description: Value for that environment variable
-                              valueFrom:
-                                type: object
-                                description: Source for the environment variable's value
-                        resources:
-                          type: object
-                          properties:
-                            limits:
-                              type: object
-                            requests:
-                              type: object
+                          format: password
+                          description: Client secret
+                        hostnameHTTP:
+                          type: string
+                          description: Hostname to set as redirect URL
+                        hostnameHTTPS:
+                          type: string
+                          description: Secure hostname to set as redirect URL
                 servers:
                   type: array
                   description: Configuration of the each individual KIE server
@@ -141,6 +99,10 @@ spec:
                       name:
                         type: string
                         description: Server name
+                      deployments:
+                        type: integer
+                        format: int
+                        description: Number of Server sets that will be deployed
                       from:
                         type: object
                         description: Image definition to use for all the servers
@@ -150,7 +112,10 @@ spec:
                         properties:
                           kind:
                             type: string
-                            description: Object kind. e.g. ImageStreamTag
+                            description: Object kind
+                            enum:
+                              - ImageStreamTag
+                              - DockerImage
                           name:
                             type: string
                             description: Object name
@@ -224,38 +189,51 @@ spec:
                               namespace:
                                 type: string
                                 description: Namespace where the object is located
-                      spec:
-                        type: object
-                        description: Common Server configuration
-                        properties:
-                          env:
-                            type: array
-                            items:
+                      env:
+                        type: array
+                        items:
+                          type: object
+                          required:
+                            - name
+                          oneOf:
+                            - required:
+                                - value
+                            - required:
+                                - valueFrom
+                          properties:
+                            name:
+                              type: string
+                              description: Name of an environment variable
+                            value:
+                              type: string
+                              description: Value for that environment variable
+                            valueFrom:
                               type: object
-                              required:
-                                - name
-                              oneOf:
-                                - required:
-                                    - value
-                                - required:
-                                    - valueFrom
-                              properties:
-                                name:
-                                  type: string
-                                  description: Name of an environment variable
-                                value:
-                                  type: string
-                                  description: Value for that environment variable
-                                valueFrom:
-                                  type: object
-                                  description: Source for the environment variable's value
-                          resources:
+                              description: Source for the environment variable's value
+                      resources:
+                        type: object
+                        properties:
+                          limits:
                             type: object
-                            properties:
-                              limits:
-                                type: object
-                              requests:
-                                type: object
+                          requests:
+                            type: object
+                      ssoClient:
+                        type: object
+                        description: Client definitions used for creating the RH-SSO clients in the specified Realm
+                        properties:
+                          name:
+                            type: string
+                            description: Client name
+                          secret:
+                            type: string
+                            format: password
+                            description: Client secret
+                          hostnameHTTP:
+                            type: string
+                            description: Hostname to set as redirect URL
+                          hostnameHTTPS:
+                            type: string
+                            description: Secure hostname to set as redirect URL
                 smartrouter:
                   type: object
                   description: Configuration of the RHPAM smart router
@@ -328,48 +306,6 @@ spec:
                     principalAttribute:
                       type: string
                       description: RH-SSO Principal Attribute to use as username
-                    clients:
-                      type: object
-                      description: Client definitions used for creating the RH-SSO clients in the specified Realm
-                      properties:
-                        console:
-                          type: object
-                          description: Console client definition
-                          properties:
-                            name:
-                              type: string
-                              description: Client name
-                            secret:
-                              type: string
-                              format: password
-                              description: Client secret
-                            hostnameHTTP:
-                              type: string
-                              description: Hostname to set as redirect URL
-                            hostnameHTTPS:
-                              type: string
-                              description: Secure hostname to set as redirect URL
-                        servers:
-                          type: array
-                          description: Client definition of all the Servers
-                          minItems: 1
-                          items:
-                            type: object
-                            description: Single Server client definition
-                            properties:
-                              name:
-                                type: string
-                                description: Client name
-                              secret:
-                                type: string
-                                format: password
-                                description: Client secret
-                              hostnameHTTP:
-                                type: string
-                                description: Hostname to set as redirect URL
-                              hostnameHTTPS:
-                                type: string
-                                description: Secure hostname to set as redirect URL
                 ldap:
                   type: object
                   description: LDAP integration configuration
