--- a/deploy/examples/auth_sso.yaml
+++ b/deploy/examples/auth_sso.yaml
@@ -5,9 +5,9 @@ metadata:
 spec:
   environment: rhdm-trial
   objects:
-    server:
+    servers:
       # The number of kie server sets must be the same as the SSO clients defined
-      deployments: 2
+      - deployments: 2
   auth:
     sso:
       url: https://rh-sso.example.com:8443
