--- a/config/envs/rhdm-trial.yaml
+++ b/config/envs/rhdm-trial.yaml
@@ -54,17 +54,17 @@ servers:
   - deploymentConfigs:
       ## KIE server deployment config BEGIN
       - metadata:
-          name: "{{$.ApplicationName}}-kieserver-{{$index}}"
+          name: "{{.KieName}}-kieserver-{{.KieIndex}}"
         spec:
           template:
             metadata:
-              name: "{{$.ApplicationName}}-kieserver-{{$index}}"
+              name: "{{.KieName}}-kieserver-{{.KieIndex}}"
             spec:
               containers:
-                - name: "{{$.ApplicationName}}-kieserver-{{$index}}"
+                - name: "{{.KieName}}-kieserver-{{.KieIndex}}"
                   env:
                     - name: KIE_SERVER_ROUTE_NAME
-                      value: "{{$.ApplicationName}}-kieserver-{{$index}}-http"
+                      value: "{{.KieName}}-kieserver-{{.KieIndex}}-http"
                     - name: KIE_SERVER_PROTOCOL
                     - name: KIE_SERVER_PORT
                     - name: FILTERS
@@ -92,19 +92,19 @@ servers:
     ## KIE server deployment config END
     ## KIE server route BEGIN
     routes:
-      - id: "{{$.ApplicationName}}-kieserver-{{$index}}-http"
+      - id: "{{.KieName}}-kieserver-{{.KieIndex}}-http"
         metadata:
-          name: "{{$.ApplicationName}}-kieserver-{{$index}}-http"
+          name: "{{.KieName}}-kieserver-{{.KieIndex}}-http"
           labels:
             app: "{{$.ApplicationName}}"
             application: "{{$.ApplicationName}}"
-            service: "{{$.ApplicationName}}-kieserver-{{$index}}"
+            service: "{{.KieName}}-kieserver-{{.KieIndex}}"
           annotations:
             description: Route for KIE server's http service.
             haproxy.router.openshift.io/timeout: 60s
         spec:
           to:
-            name: "{{$.ApplicationName}}-kieserver-{{$index}}"
+            name: "{{.KieName}}-kieserver-{{.KieIndex}}"
           port:
             targetPort: http
     ## KIE server route END
