--- a/deploy/examples/auth_sso.yaml
+++ b/deploy/examples/auth_sso.yaml
@@ -4,17 +4,19 @@ metadata:
   name: rhdm-sso
 spec:
   environment: rhdm-trial
-  objects:
-    servers:
-      # The number of kie server sets must be the same as the SSO clients defined
-      - deployments: 2
   auth:
     sso:
       url: https://rh-sso.example.com:8443
       realm: rhdm
-      clients:
-        console:
-          name: rhdm-console
-        servers:
-          - name: kieserver-1
-          - name: kieserver-2
+  objects:
+    console:
+      ssoClient:
+        name: rhdm-console
+    servers:
+      - name: one
+        deployments: 2
+        ssoClient:
+          name: kieserver-one
+      - name: two
+        ssoClient:
+          name: kieserver-two
