--- a/config/envs/rhpam-production.yaml
+++ b/config/envs/rhpam-production.yaml
@@ -21,11 +21,11 @@ servers:
   ## PostgreSQL persistent volume claim BEGIN
   - persistentVolumeClaims:
       - metadata:
-          name: "{{$.ApplicationName}}-postgresql-claim-{{$index}}"
+          name: "{{.KieName}}-postgresql-claim-{{.KieIndex}}"
           labels:
             app: "{{$.ApplicationName}}"
             application: "{{$.ApplicationName}}"
-            service: "{{$.ApplicationName}}-postgresql-{{$index}}"
+            service: "{{.KieName}}-postgresql-{{.KieIndex}}"
         spec:
           accessModes:
             - ReadWriteOnce
@@ -37,17 +37,17 @@ servers:
     ## KIE server deployment config BEGIN
     deploymentConfigs:
       - metadata:
-          name: "{{$.ApplicationName}}-kieserver-{{$index}}"
+          name: "{{.KieName}}-kieserver-{{.KieIndex}}"
           labels:
             app: "{{$.ApplicationName}}"
             application: "{{$.ApplicationName}}"
-            service: "{{$.ApplicationName}}-kieserver-{{$index}}"
+            service: "{{.KieName}}-kieserver-{{.KieIndex}}"
         spec:
           replicas: 3
           template:
             spec:
               containers:
-                - name: "{{$.ApplicationName}}-kieserver-{{$index}}"
+                - name: "{{.KieName}}-kieserver-{{.KieIndex}}"
                   env:
                     - name: EXTERNAL_MAVEN_REPO_ID
                       value: ""
@@ -83,7 +83,7 @@ servers:
                     - name: RHPAM_PASSWORD
                       value: "{{$.AdminPassword}}"
                     - name: RHPAM_SERVICE_HOST
-                      value: "{{$.ApplicationName}}-postgresql-{{$index}}"
+                      value: "{{.KieName}}-postgresql-{{.KieIndex}}"
                     - name: RHPAM_SERVICE_PORT
                       value: "5432"
                     - name: TIMER_SERVICE_DATA_STORE_REFRESH_INTERVAL
@@ -92,11 +92,11 @@ servers:
       ## KIE server deployment config END
       ## PostgreSQL deployment config BEGIN
       - metadata:
-          name: "{{$.ApplicationName}}-postgresql-{{$index}}"
+          name: "{{.KieName}}-postgresql-{{.KieIndex}}"
           labels:
             app: "{{$.ApplicationName}}"
             application: "{{$.ApplicationName}}"
-            service: "{{$.ApplicationName}}-postgresql-{{$index}}"
+            service: "{{.KieName}}-postgresql-{{.KieIndex}}"
         spec:
           strategy:
             type: Recreate
@@ -105,7 +105,7 @@ servers:
               imageChangeParams:
                 automatic: true
                 containerNames:
-                  - "{{$.ApplicationName}}-postgresql"
+                  - "{{.KieName}}-postgresql"
                 from:
                   kind: ImageStreamTag
                   namespace: "openshift"
@@ -113,18 +113,18 @@ servers:
             - type: ConfigChange
           replicas: 1
           selector:
-            deploymentConfig: "{{$.ApplicationName}}-postgresql-{{$index}}"
+            deploymentConfig: "{{.KieName}}-postgresql-{{.KieIndex}}"
           template:
             metadata:
-              name: "{{$.ApplicationName}}-postgresql-{{$index}}"
+              name: "{{.KieName}}-postgresql-{{.KieIndex}}"
               labels:
-                deploymentConfig: "{{$.ApplicationName}}-postgresql-{{$index}}"
+                deploymentConfig: "{{.KieName}}-postgresql-{{.KieIndex}}"
                 app: "{{$.ApplicationName}}"
                 application: "{{$.ApplicationName}}"
-                service: "{{$.ApplicationName}}-postgresql-{{$index}}"
+                service: "{{.KieName}}-postgresql-{{.KieIndex}}"
             spec:
               containers:
-                - name: "{{$.ApplicationName}}-postgresql"
+                - name: "{{.KieName}}-postgresql"
                   image: postgresql
                   imagePullPolicy: IfNotPresent
                   livenessProbe:
@@ -145,7 +145,7 @@ servers:
                       protocol: TCP
                   volumeMounts:
                     - mountPath: "/var/lib/pgsql/data"
-                      name: "{{$.ApplicationName}}-postgresql-pvol"
+                      name: "{{.KieName}}-postgresql-pvol"
                   env:
                     - name: POSTGRESQL_USER
                       value: "rhpam"
@@ -156,9 +156,9 @@ servers:
                     - name: POSTGRESQL_MAX_PREPARED_TRANSACTIONS
                       value: "100"
               volumes:
-                - name: "{{$.ApplicationName}}-postgresql-pvol"
+                - name: "{{.KieName}}-postgresql-pvol"
                   persistentVolumeClaim:
-                    claimName: "{{$.ApplicationName}}-postgresql-claim-{{$index}}"
+                    claimName: "{{.KieName}}-postgresql-claim-{{.KieIndex}}"
     ## PostgreSQL deployment config END
     services:
       ## PostgreSQL service BEGIN
@@ -167,14 +167,14 @@ servers:
             description: The database server's port.
           labels:
             application: prod
-            service: "{{$.ApplicationName}}-postgresql-{{$index}}"
-          name: "{{$.ApplicationName}}-postgresql-{{$index}}"
+            service: "{{.KieName}}-postgresql-{{.KieIndex}}"
+          name: "{{.KieName}}-postgresql-{{.KieIndex}}"
         spec:
           ports:
             - port: 5432
               targetPort: 5432
           selector:
-            deploymentConfig: "{{$.ApplicationName}}-postgresql-{{$index}}"
+            deploymentConfig: "{{.KieName}}-postgresql-{{.KieIndex}}"
     ## PostgreSQL service END
   #{{end}}
   ## RANGE ends
