--- a/config/common.yaml
+++ b/config/common.yaml
@@ -424,14 +424,13 @@ servers:
   ## RANGE BEGINS
   #{{ range $index, $Map := .Servers }}
   ## KIE server deployment config BEGIN
-  - kieName: "{{.KieName}}"
-    deploymentConfigs:
+  - deploymentConfigs:
       - metadata:
-          name: "{{.KieName}}-kieserver-{{.KieIndex}}"
+          name: "{{.KieName}}{{.KieIndex}}"
           labels:
             app: "{{$.ApplicationName}}"
             application: "{{$.ApplicationName}}"
-            service: "{{.KieName}}-kieserver-{{.KieIndex}}"
+            service: "{{.KieName}}{{.KieIndex}}"
         spec:
           strategy:
             rollingParams:
@@ -442,7 +441,7 @@ servers:
               imageChangeParams:
                 automatic: true
                 containerNames:
-                  - "{{.KieName}}-kieserver-{{.KieIndex}}"
+                  - "{{.KieName}}{{.KieIndex}}"
                 from:
                   kind: "{{.From.Kind}}"
                   namespace: "{{.From.Namespace}}"
@@ -450,20 +449,20 @@ servers:
             - type: ConfigChange
           replicas: 1
           selector:
-            deploymentConfig: "{{.KieName}}-kieserver-{{.KieIndex}}"
+            deploymentConfig: "{{.KieName}}{{.KieIndex}}"
           template:
             metadata:
-              name: "{{.KieName}}-kieserver-{{.KieIndex}}"
+              name: "{{.KieName}}{{.KieIndex}}"
               labels:
                 app: "{{$.ApplicationName}}"
                 application: "{{$.ApplicationName}}"
-                service: "{{.KieName}}-kieserver-{{.KieIndex}}"
-                deploymentConfig: "{{.KieName}}-kieserver-{{.KieIndex}}"
+                service: "{{.KieName}}{{.KieIndex}}"
+                deploymentConfig: "{{.KieName}}{{.KieIndex}}"
             spec:
               serviceAccountName: "{{$.ApplicationName}}-{{$.Product}}svc"
               terminationGracePeriodSeconds: 60
               containers:
-                - name: "{{.KieName}}-kieserver-{{.KieIndex}}"
+                - name: "{{.KieName}}{{.KieIndex}}"
                   image: "{{$.Product}}{{$.Version}}-kieserver-openshift"
                   imagePullPolicy: Always
                   env:
@@ -490,7 +489,7 @@ servers:
                     - name: KIE_MBEANS
                       value: enabled
                     - name: KIE_SERVER_ROUTE_NAME
-                      value: "{{.KieName}}-kieserver-{{.KieIndex}}"
+                      value: "{{.KieName}}{{.KieIndex}}"
                     - name: KIE_SERVER_USE_SECURE_ROUTE_NAME
                       value: "false"
                     - name: KIE_SERVER_PROTOCOL
@@ -498,7 +497,7 @@ servers:
                     - name: KIE_SERVER_PORT
                       value: "443"
                     - name: KIE_SERVER_ID
-                      value: "{{.KieName}}-kieserver-{{.KieIndex}}"
+                      value: "{{.KieName}}{{.KieIndex}}"
                     - name: "{{$.MavenRepo}}_MAVEN_REPO_USERNAME"
                       value: mavenUser
                     - name: "{{$.MavenRepo}}_MAVEN_REPO_PASSWORD"
@@ -522,7 +521,7 @@ servers:
                     - name: JGROUPS_PING_PROTOCOL
                       value: "openshift.DNS_PING"
                     - name: OPENSHIFT_DNS_PING_SERVICE_NAME
-                      value: "{{.KieName}}-kieserver-{{.KieIndex}}-ping"
+                      value: "{{.KieName}}{{.KieIndex}}-ping"
                     - name: OPENSHIFT_DNS_PING_SERVICE_PORT
                       value: "8888"
                     # Auth config BEGIN
@@ -650,7 +649,7 @@ servers:
               volumes:
                 - name: kieserver-keystore-volume
                   secret:
-                    secretName: "{{.KieName}}-kieserver-{{.KieIndex}}-app-secret"
+                    secretName: "{{.KieName}}{{.KieIndex}}-app-secret"
       ## KIE server deployment config END
     ## KIE server services BEGIN
     services:
@@ -663,17 +662,17 @@ servers:
               port: 8443
               targetPort: 8443
           selector:
-            deploymentConfig: "{{.KieName}}-kieserver-{{.KieIndex}}"
+            deploymentConfig: "{{.KieName}}{{.KieIndex}}"
           sessionAffinity: ClientIP
           sessionAffinityConfig:
             clientIP:
               timeoutSeconds: 3600
         metadata:
-          name: "{{.KieName}}-kieserver-{{.KieIndex}}"
+          name: "{{.KieName}}{{.KieIndex}}"
           labels:
             app: "{{$.ApplicationName}}"
             application: "{{$.ApplicationName}}"
-            service: "{{.KieName}}-kieserver-{{.KieIndex}}"
+            service: "{{.KieName}}{{.KieIndex}}"
           annotations:
             description: All the KIE server web server's ports. (KIE server)
       - spec:
@@ -683,32 +682,32 @@ servers:
               port: 8888
               targetPort: 8888
           selector:
-            deploymentConfig: "{{.KieName}}-kieserver-{{.KieIndex}}"
+            deploymentConfig: "{{.KieName}}{{.KieIndex}}"
         metadata:
-          name: "{{.KieName}}-kieserver-{{.KieIndex}}-ping"
+          name: "{{.KieName}}{{.KieIndex}}-ping"
           labels:
             app: "{{$.ApplicationName}}"
             application: "{{$.ApplicationName}}"
-            service: "{{.KieName}}-kieserver-{{.KieIndex}}"
+            service: "{{.KieName}}{{.KieIndex}}"
           annotations:
             service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
             description: "The JGroups ping port for clustering."
       ## KIE server services END
     ## KIE server routes BEGIN
     routes:
-      - id: "{{.KieName}}-kieserver-{{.KieIndex}}-https"
+      - id: "{{.KieName}}{{.KieIndex}}-https"
         metadata:
-          name: "{{.KieName}}-kieserver-{{.KieIndex}}"
+          name: "{{.KieName}}{{.KieIndex}}"
           labels:
             app: "{{$.ApplicationName}}"
             application: "{{$.ApplicationName}}"
-            service: "{{.KieName}}-kieserver-{{.KieIndex}}"
+            service: "{{.KieName}}{{.KieIndex}}"
           annotations:
             description: Route for KIE server's https service.
             haproxy.router.openshift.io/timeout: 60s
         spec:
           to:
-            name: "{{.KieName}}-kieserver-{{.KieIndex}}"
+            name: "{{.KieName}}{{.KieIndex}}"
           port:
             targetPort: https
           tls:
