--- a/config/envs/rhdm-authoring-ha.yaml
+++ b/config/envs/rhdm-authoring-ha.yaml
@@ -275,7 +275,7 @@ servers:
   ## KIE server deployment config BEGIN
   - deploymentConfigs:
       - metadata:
-          name: "{{.KieName}}-kieserver-{{.KieIndex}}"
+          name: "{{.KieName}}{{.KieIndex}}"
         spec:
           replicas: 2
   ## KIE server deployment config END
