--- a/config/envs/rhpam-production-immutable.yaml
+++ b/config/envs/rhpam-production-immutable.yaml
@@ -9,11 +9,11 @@ servers:
   ## PostgreSQL persistent volume claim BEGIN
   - persistentVolumeClaims:
       - metadata:
-          name: "{{.KieName}}-postgresql-claim-{{.KieIndex}}"
+          name: "{{.KieName}}{{.KieIndex}}-postgresql-claim"
           labels:
             app: "{{$.ApplicationName}}"
             application: "{{$.ApplicationName}}"
-            service: "{{.KieName}}-postgresql-{{.KieIndex}}"
+            service: "{{.KieName}}{{.KieIndex}}-postgresql"
         spec:
           accessModes:
             - ReadWriteOnce
@@ -25,18 +25,18 @@ servers:
     #{{if .Build.KieServerContainerDeployment}}
     imageStreams:
       - metadata:
-          name: "{{.KieName}}-kieserver-{{.KieIndex}}"
+          name: "{{.KieName}}{{.KieIndex}}"
           labels:
             app: "{{$.ApplicationName}}"
             application: "{{$.ApplicationName}}"
-            service: "{{.KieName}}-kieserver-{{.KieIndex}}"
+            service: "{{.KieName}}{{.KieIndex}}"
     buildConfigs:
       - metadata:
-          name: "{{.KieName}}-kieserver-{{.KieIndex}}"
+          name: "{{.KieName}}{{.KieIndex}}"
           labels:
             app: "{{$.ApplicationName}}"
             application: "{{$.ApplicationName}}"
-            service: "{{.KieName}}-kieserver-{{.KieIndex}}"
+            service: "{{.KieName}}{{.KieIndex}}"
         spec:
           source:
             type: Git
@@ -62,7 +62,7 @@ servers:
           output:
             to:
               kind: ImageStreamTag
-              name: "{{.KieName}}-kieserver-{{.KieIndex}}:latest"
+              name: "{{.KieName}}{{.KieIndex}}:latest"
           triggers:
             - type: GitHub
               github:
@@ -78,18 +78,18 @@ servers:
     ## KIE server deployment config BEGIN
     deploymentConfigs:
       - metadata:
-          name: "{{.KieName}}-kieserver-{{.KieIndex}}"
+          name: "{{.KieName}}{{.KieIndex}}"
           labels:
             app: "{{$.ApplicationName}}"
             application: "{{$.ApplicationName}}"
-            service: "{{.KieName}}-kieserver-{{.KieIndex}}"
+            service: "{{.KieName}}{{.KieIndex}}"
         spec:
           replicas: 2
           template:
             spec:
               containers:
-                - name: "{{.KieName}}-kieserver-{{.KieIndex}}"
-                  image: "{{.KieName}}-kieserver-{{.KieIndex}}"
+                - name: "{{.KieName}}{{.KieIndex}}"
+                  image: "{{.KieName}}{{.KieIndex}}"
                   env:
                     - name: KIE_SERVER_CONTAINER_DEPLOYMENT
                       value: "{{.Build.KieServerContainerDeployment}}"
@@ -127,7 +127,7 @@ servers:
                     - name: RHPAM_PASSWORD
                       value: "{{$.AdminPassword}}"
                     - name: RHPAM_SERVICE_HOST
-                      value: "{{.KieName}}-postgresql-{{.KieIndex}}"
+                      value: "{{.KieName}}{{.KieIndex}}-postgresql"
                     - name: RHPAM_SERVICE_PORT
                       value: "5432"
                     - name: TIMER_SERVICE_DATA_STORE_REFRESH_INTERVAL
@@ -136,11 +136,11 @@ servers:
       ## KIE server deployment config END
       ## PostgreSQL deployment config BEGIN
       - metadata:
-          name: "{{.KieName}}-postgresql-{{.KieIndex}}"
+          name: "{{.KieName}}{{.KieIndex}}-postgresql"
           labels:
             app: "{{$.ApplicationName}}"
             application: "{{$.ApplicationName}}"
-            service: "{{.KieName}}-postgresql-{{.KieIndex}}"
+            service: "{{.KieName}}{{.KieIndex}}-postgresql"
         spec:
           strategy:
             type: Recreate
@@ -157,15 +157,15 @@ servers:
             - type: ConfigChange
           replicas: 1
           selector:
-            deploymentConfig: "{{.KieName}}-postgresql-{{.KieIndex}}"
+            deploymentConfig: "{{.KieName}}{{.KieIndex}}-postgresql"
           template:
             metadata:
-              name: "{{.KieName}}-postgresql-{{.KieIndex}}"
+              name: "{{.KieName}}{{.KieIndex}}-postgresql"
               labels:
-                deploymentConfig: "{{.KieName}}-postgresql-{{.KieIndex}}"
+                deploymentConfig: "{{.KieName}}{{.KieIndex}}-postgresql"
                 app: "{{$.ApplicationName}}"
                 application: "{{$.ApplicationName}}"
-                service: "{{.KieName}}-postgresql-{{.KieIndex}}"
+                service: "{{.KieName}}{{.KieIndex}}-postgresql"
             spec:
               containers:
                 - name: "{{.KieName}}-postgresql"
@@ -202,7 +202,7 @@ servers:
               volumes:
                 - name: "{{.KieName}}-postgresql-pvol"
                   persistentVolumeClaim:
-                    claimName: "{{.KieName}}-postgresql-claim-{{.KieIndex}}"
+                    claimName: "{{.KieName}}{{.KieIndex}}-postgresql-claim"
     ## PostgreSQL deployment config END
     services:
       ## PostgreSQL service BEGIN
@@ -211,14 +211,14 @@ servers:
             description: The database server's port.
           labels:
             application: prod
-            service: "{{.KieName}}-postgresql-{{.KieIndex}}"
-          name: "{{.KieName}}-postgresql-{{.KieIndex}}"
+            service: "{{.KieName}}{{.KieIndex}}-postgresql"
+          name: "{{.KieName}}{{.KieIndex}}-postgresql"
         spec:
           ports:
             - port: 5432
               targetPort: 5432
           selector:
-            deploymentConfig: "{{.KieName}}-postgresql-{{.KieIndex}}"
+            deploymentConfig: "{{.KieName}}{{.KieIndex}}-postgresql"
     ## PostgreSQL service END
 #{{end}}
 ## RANGE ends
